src/app/modules/authentication/pages/authentication.page/authentication.page.component.scss
:host {
	display: block;
}

.auth-box {
	margin: auto;
	width: 100%;
	height: 80vh;
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	align-items: center;
	gap: 2em;
	.slider {
		width: 60%;
		height: 80%;
		img {
			width: 100%;
			height: 100%;
			border-radius: 1em;
			opacity: 0.8;
		}
	}
	.login {
		width: 30%;
		height: 80%;
		.card {
			height: 100%;
			.header {
				width: 100%;
				display: flex;
				flex-direction: row;
				justify-content: center;
				align-items: center;
			}
			.content {
				margin-top: 2em;
				height: 50%;
				form {
					display: flex;
					flex-direction: column;
					gap: 2em;
				}
			}
		}
	}
}

// .auth-box {
// 	width: 30%;
// 	margin: 5% auto;
// 	display: flex;
// 	flex-direction: column;
// 	justify-content: center;
// 	align-items: center;
// 	.header {
// 		width: 100%;
// 		margin-bottom: 1em;
// 	}
// 	.input {
// 		width: 100%;
// 	}
// }

